# stateful-student-assistant-ui

./: Dockerfile  README.md  app.py  chainlit.md  chainlit.yaml  main.py  pyproject.toml  requirements.txt
.chainlit/: config.toml
.chainlit/translations/: en-US.md
